--- a/app/src/main/res/layout/activity_data__rate.xml
+++ b/app/src/main/res/layout/activity_data__rate.xml
@@ -1,9 +1,269 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="tties.cn.energy.view.activity.Data_RateActivity">
+    android:orientation="vertical"
+    tools:context="tties.cn.energy.view.activity.DataActivity">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <include
+            layout="@layout/toobar"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_height="60dp">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3"
+                    android:paddingLeft="20dp"
+                    android:gravity="center"
+                    android:text="最大有功功率"
+                    android:textSize="16sp"
+                    android:textColor="@color/black"/>
 
-</android.support.constraint.ConstraintLayout>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:layout_weight="3">
+                    <TextView
+                        android:id="@+id/havekw_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="5dp"
+                        android:textSize="30sp"
+                        android:textColor="@color/orangered"
+                        android:text="0"/>
+                    <TextView
+                        android:layout_marginTop="8dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="5dp"
+                        android:text="Kw"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:orientation="vertical"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3">
+                    <LinearLayout
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp">
+                        <ImageView
+                            android:layout_gravity="center"
+                            android:layout_marginTop="3dp"
+                            android:src="@mipmap/data_unbalance"
+                            android:layout_width="15dp"
+                            android:layout_height="15dp" />
+                        <TextView
+                            android:id="@+id/havakw_time"
+                            android:layout_marginLeft="5dp"
+                            android:layout_gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="25sp"
+                            android:textColor="@color/gray"
+                            android:text="00:00"/>
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/havakw_year"
+                        android:layout_gravity="center"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/gray"
+                        android:paddingTop="5dp"
+                        android:text="0000/00/00"/>
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_height="60dp">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3"
+                    android:paddingLeft="20dp"
+                    android:gravity="center"
+                    android:text="最大无功功率"
+                    android:textSize="16sp"
+                    android:textColor="@color/black"/>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:layout_weight="3">
+                    <TextView
+                        android:id="@+id/nokvar_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="5dp"
+                        android:textSize="30sp"
+                        android:textColor="@color/gray"
+                        android:text="0"/>
+                    <TextView
+                        android:layout_marginTop="8dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="5dp"
+                        android:text="Kvar"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:orientation="vertical"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3">
+                    <LinearLayout
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp">
+                        <ImageView
+                            android:layout_gravity="center"
+                            android:layout_marginTop="3dp"
+                            android:src="@mipmap/data_unbalance"
+                            android:layout_width="15dp"
+                            android:layout_height="15dp" />
+                        <TextView
+                            android:id="@+id/nokvar_time"
+                            android:layout_marginLeft="5dp"
+                            android:layout_gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="25sp"
+                            android:textColor="@color/gray"
+                            android:text="00:00"/>
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/nokvar_year"
+                        android:layout_gravity="center"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/gray"
+                        android:paddingTop="5dp"
+                        android:text="0000/00/00"/>
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+        <View
+            style="@style/cut_off_line_9dp"
+            />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:id="@+id/data_rate_ll"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_height="match_parent"
+                        android:layout_width="wrap_content"
+                        android:paddingLeft="24dp"
+                        android:gravity="center_vertical"
+                        android:text="数据详情"
+                        android:textSize="20sp"
+                        android:textColor="@color/black"/>
+                </LinearLayout>
+                <tties.cn.energy.chart.LineDataChart
+                    android:id="@+id/havakw_chart"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp">
+                </tties.cn.energy.chart.LineDataChart>
+                <tties.cn.energy.chart.LineDataChart
+                    android:layout_marginTop="20dp"
+                    android:id="@+id/nokvar_chart"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp">
+                </tties.cn.energy.chart.LineDataChart>
+            </LinearLayout>
+            <View
+                android:layout_below="@+id/data_rate_ll"
+                android:id="@+id/data_rate_vv"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"></View>
+            <LinearLayout
+                android:layout_below="@+id/data_rate_vv"
+                android:id="@+id/data_rate_bottom"
+                android:layout_width="match_parent"
+                android:layout_height="49dp"
+                android:layout_alignParentBottom="true"
+                android:orientation="horizontal"
+                android:background="@color/slategrey"
+                >
+                <LinearLayout
+                    android:id="@+id/data_rate_time"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:layout_weight="1">
+                    <TextView
+                        android:id="@+id/data_rate_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/white"
+                        android:text="2018年2月"/>
+                    <ImageView
+                        android:src="@mipmap/arrows"
+                        android:layout_marginLeft="5dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/data_rate_electrical"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_weight="1">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:textColor="@color/white"
+                        android:text="总电量"/>
+                    <ImageView
+                        android:src="@mipmap/arrows"
+                        android:layout_marginLeft="5dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"/>
+                </LinearLayout>
+            </LinearLayout>
+        </RelativeLayout>
+    </LinearLayout>
+
+
+
+
+</ScrollView>
