--- a/app/src/main/res/layout/activity_data__electric.xml
+++ b/app/src/main/res/layout/activity_data__electric.xml
@@ -39,6 +39,7 @@
                     android:paddingTop="5dp"
                     android:text="原始"/>
                 <TextView
+                    android:id="@+id/electrical_num"
                     android:layout_below="@+id/tv1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -52,23 +53,23 @@
                 android:orientation="vertical"
                 android:layout_height="match_parent"
                 android:layout_weight="3">
-                <TextView
-                    android:id="@+id/tv2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:textColor="@color/orangered"
-                    android:paddingTop="5dp"
-                    android:text="校验后"/>
+                <!--<TextView-->
+                    <!--android:id="@+id/tv2"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_alignParentRight="true"-->
+                    <!--android:textColor="@color/orangered"-->
+                    <!--android:paddingTop="5dp"-->
+                    <!--android:text="校验后"/>-->
                 <TextView
                     android:layout_below="@+id/tv2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
+                    android:layout_centerInParent="true"
                     android:paddingTop="5dp"
                     android:textSize="20sp"
                     android:textColor="@color/orangered"
-                    android:text="￥768678.03"/>
+                    android:text="正在校验"/>
             </RelativeLayout>
             <LinearLayout
                 android:layout_width="0dp"
@@ -109,8 +110,9 @@
                     android:textColor="@color/black"/>
             </LinearLayout>
             <tties.cn.energy.chart.LineDataChart
+                android:id="@+id/electrical_chart"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="200dp">
             </tties.cn.energy.chart.LineDataChart>
         </LinearLayout>
         <LinearLayout
@@ -121,14 +123,14 @@
             android:background="@color/slategrey"
             >
             <LinearLayout
-                android:id="@+id/data_time"
+                android:id="@+id/data_electrical_time"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:gravity="center"
                 android:layout_weight="1">
                 <TextView
-                    android:id="@+id/data_time_tv"
+                    android:id="@+id/data_electrical_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
@@ -141,7 +143,7 @@
                     />
             </LinearLayout>
             <LinearLayout
-                android:id="@+id/data_allelectric"
+                android:id="@+id/data_allelectric_electrical"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:gravity="center"
